--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
+    "react": "^0.13.3",
     "serve-favicon": "~2.2.0",
     "serve-static": "^1.10.0",
     "tsd": "0.6.0-beta.5",
