--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
+    "mongoose": "^4.0.6",
     "morgan": "~1.5.1",
     "react": "^0.13.3",
     "serve-favicon": "~2.2.0",
     "serve-static": "^1.10.0",
+    "socket.io": "^1.3.5",
     "tsd": "0.6.0-beta.5",
     "typescript": "^1.4.1"
   }
