--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
   ],
   "dependencies": {
     "react": "~0.13.3",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "socket.io": "~1.3.5",
+    "marked": "~0.3.3"
   }
 }
