--- a/package.json
+++ b/package.json
@@ -7,17 +7,39 @@
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "browserify": "^10.2.6",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
+    "del": "^1.2.0",
     "express": "~4.11.1",
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-inject": "^1.3.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-react": "^3.0.1",
+    "gulp-typescript": "^2.7.8",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "jade": "~1.9.1",
+    "lodash": "^3.10.0",
+    "merge2": "^0.3.6",
     "mongoose": "^4.0.6",
     "morgan": "~1.5.1",
+    "path": "^0.11.14",
     "react": "^0.13.3",
+    "reactify": "^1.1.1",
+    "require-dir": "^0.3.0",
     "serve-favicon": "~2.2.0",
     "serve-static": "^1.10.0",
     "socket.io": "^1.3.5",
     "tsd": "0.6.0-beta.5",
-    "typescript": "^1.4.1"
+    "typescript": "^1.4.1",
+    "uglify": "^0.1.5"
+  },
+  "devDependencies": {
+    "csslint": "^0.10.0",
+    "gulp-util": "^3.0.6",
+    "through": "^2.3.8"
   }
 }
