--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,36 @@
-{}
+{
+    "filesGlob": [
+        "./**/*.ts",
+        "!./node_modules/**/*.ts"
+    ],
+    "compilerOptions": {
+        "target": "ES5",
+        "module": "commonjs",
+        "noImplicitAny": true,
+        "removeComments": true,
+        "preserveConstEnums": true,
+        "sourceMap": true
+    },
+    "files": [
+        "./app.ts",
+        "./config/IEnvConfig.ts",
+        "./config/config.ts",
+        "./config/development.ts",
+        "./config/production.ts",
+        "./config/test.ts",
+        "./lib/socket/smoonet.ts",
+        "./models/comment.ts",
+        "./routes/index.ts",
+        "./typings/body-parser/body-parser.d.ts",
+        "./typings/cookie-parser/cookie-parser.d.ts",
+        "./typings/debug/debug.d.ts",
+        "./typings/express/express.d.ts",
+        "./typings/mime/mime.d.ts",
+        "./typings/mongoose/mongoose.d.ts",
+        "./typings/morgan/morgan.d.ts",
+        "./typings/node/node.d.ts",
+        "./typings/serve-favicon/serve-favicon.d.ts",
+        "./typings/serve-static/serve-static.d.ts",
+        "./typings/socket.io/socket.io.d.ts"
+    ]
+}
