--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,10 @@
     "bootstrap": "~3.3.5",
     "socket.io": "~1.3.5",
     "marked": "~0.3.3"
-  }
+},
+  "overrides": {
+      "socket.io": {
+        "main": ["lib/socket.js"]
+      }
+    }
 }
