--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,13 @@
   "dependencies": {
     "react": "~0.13.3",
     "bootstrap": "~3.3.5",
-    "socket.io": "~1.3.5",
     "marked": "~0.3.3"
-},
+  },
   "overrides": {
-      "socket.io": {
-        "main": ["lib/socket.js"]
-      }
+    "socket.io": {
+      "main": [
+        "lib/client.js"
+      ]
     }
+  }
 }
