--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-csslint": "^0.1.5",
+    "gulp-docker": "0.0.11",
     "gulp-expect-file": "0.0.7",
     "gulp-inject": "^1.3.1",
     "gulp-jshint": "^1.11.2",
@@ -39,6 +40,7 @@
     "less": "^2.5.1",
     "lodash": "^3.10.0",
     "merge2": "^0.3.6",
+    "python": "0.0.4",
     "reactify": "^1.1.1",
     "require-dir": "^0.3.0",
     "through": "^2.3.8",
