--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "gulp-inject": "^1.3.1",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
+    "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-nodemon": "^2.0.3",
     "gulp-react": "^3.0.1",
     "gulp-typescript": "^2.7.8",
     "gulp-uglify": "^1.2.0",
