--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-csslint": "^0.1.5",
+    "gulp-cssmin": "^0.1.7",
     "gulp-docker": "0.0.11",
     "gulp-expect-file": "0.0.7",
     "gulp-inject": "^1.3.1",
