--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,11 @@
   "dependencies": {
     "react": "~0.13.3",
     "bootstrap": "~3.3.5",
-    "marked": "~0.3.3"
+    "markdown-it": "~4.3.1",
+    "markdown-it-emoji": "~1.0.0",
+    "markdown-it-container": "~1.0.0",
+    "markdown-it-sup": "~1.0.0",
+    "markdown-it-sub": "~1.0.0"
   },
   "overrides": {
     "socket.io": {
