--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,13 @@
     "markdown-it-emoji": "~1.0.0",
     "markdown-it-container": "~1.0.0",
     "markdown-it-sup": "~1.0.0",
-    "markdown-it-sub": "~1.0.0"
+    "markdown-it-sub": "~1.0.0",
+    "twemoji": "~1.4.1"
   },
   "overrides": {
-    "socket.io": {
+    "twemoji": {
       "main": [
-        "lib/client.js"
+        "./twemoji.js"
       ]
     }
   }
